refactor: use lombok for models